--- a/css/styles.css
+++ b/css/styles.css
@@ -43,7 +43,7 @@ img {
   margin: 0 auto;
 }
 
-/*Navigation bar*/
+/*===== Navigation bar =====*/
 .page-header {
   border-bottom: 1px solid #e7e9fc;
 }
@@ -138,12 +138,20 @@ img {
   color: #404bbf;
 }
 
-/*Section 1 Hero image*/
+/*===== Section 1 Hero image =====*/
 
 .image {
-  color: #fff;
-  background-color: #2e2f42;
   padding: 188px 0;
+  background-color: #2e2f42;
+  background-image: linear-gradient(
+      rgba(46, 47, 66, 0.7),
+      rgba(46, 47, 66, 0.7)
+    ),
+    url(../images/img11.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  color: #fff;
   text-align: center;
 }
 .image-title {
@@ -178,7 +186,7 @@ img {
   background-color: #404bbf;
 }
 
-/*Section 2 Strategy*/
+/*===== Section 2 Strategy =====*/
 .desc {
   line-height: 1.2;
   padding: 120px 0;
@@ -203,6 +211,12 @@ img {
 .content-item {
   width: calc((100% - 72px) / 4);
 }
+
+.desc-icon {
+  border: 1px dashed #2a2a2a;
+  border-radius: 4px;
+}
+
 .desc-title {
   color: #2e2f42;
   font-size: 20px;
@@ -218,7 +232,7 @@ img {
   letter-spacing: 0.32px;
 }
 
-/*Section 3 Our Team*/
+/*===== Section 3 Our Team =====*/
 
 .container-team-img {
   height: 100%;
@@ -274,7 +288,7 @@ img {
   letter-spacing: 0.32px;
 }
 
-/*Section 4 Our Portfolio*/
+/*===== Section 4 Our Portfolio =====*/
 .portfolio-container {
   display: flex;
   flex-wrap: wrap;
@@ -318,7 +332,7 @@ img {
   letter-spacing: 0.32px;
 }
 
-/*Footer*/
+/*===== Footer =====*/
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
@@ -351,4 +365,4 @@ img {
   letter-spacing: 0.32px;
   max-width: 264px;
 }
-/*2024 01 28*/
+/*2024 01 30*/
