--- a/css/styles.css
+++ b/css/styles.css
@@ -166,6 +166,7 @@ img {
 }
 .image-button {
   display: block;
+  margin: 0 auto;
   cursor: pointer;
   color: #fff;
   background-color: #4d5ae5;
@@ -245,7 +246,6 @@ img {
   padding: 120px 0;
 }
 .team-title-container {
-  height: 732px;
 }
 .team-title {
   color: #2e2f42;
@@ -286,6 +286,31 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+}
+
+.icon-list {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  gap: 24px;
+}
+.icon-item {
+  width: 40px;
+  height: 40px;
+}
+.icon-link {
+  width: 100%;
+  height: 100%;
+  display: flex;
+
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+}
+.icon-icon {
+  fill: #f4f4fd;
 }
 
 /*===== Section 4 Our Portfolio =====*/
