--- a/css/styles.css
+++ b/css/styles.css
@@ -210,12 +210,25 @@ img {
   gap: 24px;
 }
 .content-item {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 8px;
   width: calc((100% - 72px) / 4);
+}
+.desc-restangle {
+  width: 264px;
+  height: 112px;
+  flex-shrink: 0;
+  border-radius: 4px;
+  border: 1px solid var(--LIGHT-SLATE, #8e8f99);
+  background: var(--CLOUD, #f4f4fd);
+  padding: 24px 100px;
 }
 
 .desc-icon {
-  border: 1px dashed #2a2a2a;
-  border-radius: 4px;
+  flex-shrink: 0;
+  margin: 0 auto;
 }
 
 .desc-title {
@@ -224,7 +237,6 @@ img {
   font-weight: 500;
   line-height: 1.2;
   letter-spacing: 0.4px;
-  margin-bottom: 8px;
 }
 
 .desc-text {
@@ -266,9 +278,19 @@ img {
   background-color: #ffffff;
   width: calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
+  box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
 
 .team-name {
+  display: flex;
+  width: 232px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  margin: 0 auto;
   padding: 32px 0;
 }
 
@@ -286,13 +308,15 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  margin-bottom: 8px;
 }
 
 .icon-list {
   display: flex;
-  width: 100%;
+
   justify-content: center;
   align-items: center;
+
   gap: 24px;
 }
 .icon-item {
@@ -300,10 +324,9 @@ img {
   height: 40px;
 }
 .icon-link {
+  display: flex;
   width: 100%;
   height: 100%;
-  display: flex;
-
   align-items: center;
   justify-content: center;
   background-color: #4d5ae5;
@@ -389,5 +412,19 @@ img {
   line-height: 1.5; /* 150% */
   letter-spacing: 0.32px;
   max-width: 264px;
+}
+
+.footer-container {
+  display: flex;
+}
+.footer-social-media {
+}
+.footer-media {
+}
+.media-item {
+}
+.media-link {
+}
+.media-icon {
 }
 /*2024 01 30*/
