--- a/css/styles.css
+++ b/css/styles.css
@@ -416,12 +416,34 @@ img {
 
 .footer-container {
   display: flex;
+  /* justify-content: left;
+  align-items: 16px; */
 }
 .footer-social-media {
+  width: 208px;
+  margin-left: 120px;
 }
-.footer-media {
+
+.footer-social {
+  display: inline-block;
+  color: #fff;
+  font-size: 16px;
+  font-weight: 500;
+  text-align: center;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+  margin-bottom: 16px;
+}
+.media-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 16px;
 }
 .media-item {
+  width: 40px;
+  height: 40px;
+  flex-shrink: 0;
 }
 .media-link {
 }
