--- a/css/styles.css
+++ b/css/styles.css
@@ -46,6 +46,10 @@ img {
 /*===== Navigation bar =====*/
 .page-header {
   border-bottom: 1px solid #e7e9fc;
+  background-color: #fff;
+  box-shadow: 0px 1px 6px 0px rgba(46, 47, 66, 0.08),
+    0px 1px 1px 0px rgba(46, 47, 66, 0.16),
+    0px 2px 1px 0px rgba(46, 47, 66, 0.08);
 }
 .header-container {
   display: flex;
@@ -92,6 +96,7 @@ img {
   font-weight: 500;
   line-height: 1.5;
   letter-spacing: 0.32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .links .link {
@@ -100,20 +105,20 @@ img {
 
 .links-studio {
   color: #404bbf;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.links-studio:hover:after {
+.links-studio:hover::after {
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
   content: "";
-  width: 48px;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
   height: 4px;
-  gap: 20px;
-  border-radius: 2px;
   background-color: #404bbf;
-  padding-bottom: 4px;
-  flex-shrink: 0;
+  border-radius: 2px;
+  width: 100%;
 }
 
 /*.links .akt-link {
@@ -172,6 +177,7 @@ img {
   background-size: cover;
   color: #fff;
   text-align: center;
+  max-width: 1440px;
 }
 .image-title {
   max-width: 496px;
@@ -197,6 +203,7 @@ img {
   border: none;
   border-radius: 4px;
   padding: 16px 32px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .image-button:hover {
@@ -236,6 +243,9 @@ img {
   width: calc((100% - 72px) / 4);
 }
 .desc-restangle {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   width: 264px;
   height: 112px;
   flex-shrink: 0;
@@ -243,6 +253,7 @@ img {
   border: 1px solid var(--LIGHT-SLATE, #8e8f99);
   background: var(--CLOUD, #f4f4fd);
   padding: 24px 100px;
+  margin-bottom: 8px;
 }
 
 .desc-icon {
@@ -350,6 +361,11 @@ img {
   justify-content: center;
   background-color: #4d5ae5;
   border-radius: 50%;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-link:hover {
+  background-color: #31d0aa;
 }
 .icon-icon {
   fill: #f4f4fd;
@@ -366,6 +382,36 @@ img {
 .portfolio-item {
   width: calc((100% - 48px) / 3);
 }
+
+.portfolio-item:hover .portfolio-card {
+  transform: translateY(0);
+}
+
+.portfolio-wrap-cover {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-card {
+  position: absolute;
+  top: 0;
+  background-color: #4d5ae5;
+  height: 100%;
+  border: 1px solid var(--CLOUD, #f4f4fd);
+  display: flex;
+  align-items: center;
+  padding: 40px 32px;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-card-cover {
+  color: var(--CLOUD, #f4f4fd);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
+}
+
 .portfolio-nampar {
   padding: 32px 16px;
   border: 1px solid #e7e9fc;
@@ -404,6 +450,11 @@ img {
   background-color: #2e2f42;
   padding: 100px 0;
 }
+
+.footer-box {
+  margin-right: 120px;
+}
+
 .footer-logo {
   display: inline-block;
   color: #4d5ae5;
@@ -435,17 +486,17 @@ img {
 
 .footer-container {
   display: flex;
+  align-items: baseline;
   /* justify-content: left;
   align-items: 16px; */
 }
 .footer-social-media {
   width: 208px;
-  margin-left: 120px;
 }
 
 .footer-social {
   display: inline-block;
-  color: #fff;
+  color: #ffffff;
   font-size: 16px;
   font-weight: 500;
   text-align: center;
