--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ img {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.links-studio:hover::after {
+.links-studio::after {
   display: flex;
   content: "";
   position: absolute;
@@ -153,6 +153,7 @@ img {
 .contacts-links-info {
   display: flex;
   color: #434455;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .contacts-links .contacts-links-info:hover {
@@ -203,14 +204,15 @@ img {
   border: none;
   border-radius: 4px;
   padding: 16px 32px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .image-button:hover {
   background-color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .image-button:focus {
   background-color: #404bbf;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 /*===== Section 2 Strategy =====*/
@@ -361,12 +363,17 @@ img {
   justify-content: center;
   background-color: #4d5ae5;
   border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-link:hover {
   background-color: #31d0aa;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.icon-link:focus {
+  background-color: #31d0aa;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 .icon-icon {
   fill: #f4f4fd;
 }
@@ -383,15 +390,6 @@ img {
   width: calc((100% - 48px) / 3);
 }
 
-.portfolio-item:hover .portfolio-card {
-  transform: translateY(0);
-}
-
-.portfolio-wrap-cover {
-  position: relative;
-  overflow: hidden;
-}
-
 .portfolio-card {
   position: absolute;
   top: 0;
@@ -403,6 +401,18 @@ img {
   padding: 40px 32px;
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.portfolio-item:hover .portfolio-card {
+  transform: translateY(0);
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+
+.portfolio-wrap-cover {
+  position: relative;
+  overflow: hidden;
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-card-cover {
