--- a/css/styles.css
+++ b/css/styles.css
@@ -204,7 +204,7 @@ img {
   border: none;
   border-radius: 4px;
   padding: 16px 32px;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .image-button:hover {
@@ -366,10 +366,10 @@ img {
 }
 
 .icon-link:hover {
-  background-color: #31d0aa;
+  background-color: #404bbf;
 }
 .icon-link:focus {
-  background-color: #31d0aa;
+  background-color: #404bbf;
 }
 
 .icon-icon {
