--- a/css/styles.css
+++ b/css/styles.css
@@ -362,7 +362,7 @@ img {
   justify-content: center;
   background-color: #4d5ae5;
   border-radius: 50%;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .icon-link:hover {
@@ -524,7 +524,25 @@ img {
   flex-shrink: 0;
 }
 .media-link {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  align-items: center;
+  justify-content: center;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
+.media-link:hover {
+  background-color: #31d0aa;
+}
+
+.media-link:focus {
+  background-color: #31d0aa;
+}
+
 .media-icon {
+  fill: #f4f4fd;
 }
 /*2024 02 03*/
