--- a/css/styles.css
+++ b/css/styles.css
@@ -388,11 +388,21 @@ img {
   width: calc((100% - 48px) / 3);
 }
 
-.portfolio-card {
+.portfolio-wrap-cover {
+  position: relative;
+  overflow: hidden;
+}
+
+.portfolio-card-cover {
+  color: var(--CLOUD, #f4f4fd);
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.32px;
   position: absolute;
   top: 0;
   background-color: #4d5ae5;
   height: 100%;
+  width: 100%;
   border: 1px solid var(--CLOUD, #f4f4fd);
   display: flex;
   align-items: center;
@@ -402,23 +412,13 @@ img {
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-wrap:hover .portfolio-card {
+.portfolio-card {
+}
+
+.portfolio-item:hover .portfolio-card-cover {
   transform: translateY(0);
   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
     0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
-
-.portfolio-wrap-cover {
-  position: relative;
-  overflow: hidden;
-  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.portfolio-card-cover {
-  color: var(--CLOUD, #f4f4fd);
-  font-size: 16px;
-  line-height: 1.5;
-  letter-spacing: 0.32px;
 }
 
 .portfolio-nampar {
