--- a/css/styles.css
+++ b/css/styles.css
@@ -80,6 +80,7 @@ img {
 
 .links {
   display: flex;
+  align-items: center;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -178,7 +179,9 @@ img {
   background-size: cover;
   color: #fff;
   text-align: center;
+  width: 100%;
   max-width: 1440px;
+  margin: 0 auto;
 }
 .image-title {
   max-width: 496px;
